[workspace]
resolver = "2"
members = [
    "anchor/client",
    "anchor/idl",
    "anchor/lang",
    "anchor/spl",
    "bx",
    "jupiter-amm-interface",
    "orca/client",
    "orca/core",
    "orca/macros",
    "pyth/pyth-sdk",
    "pyth/pyth-sdk-solana",
    "qtrade-client",
    "qtrade-custom-checks",
    "qtrade-indexer",
    "qtrade-relayer",
    "qtrade-router",
    "qtrade-runtime",
    "qtrade-shared-types",
    "qtrade-wallets",
    "raydium-clmm/client",
    "raydium-clmm/programs/amm",
    "raydium-cp-swap/client",
    "raydium-cp-swap/programs/cp-swap",
    "vixen/crates/core",
    "vixen/crates/mock",
    "vixen/crates/parser",
    "vixen/crates/proto",
    "vixen/crates/runtime",
]

exclude = [
    "jupiter-amm-implementation",
    "raydium-clmm/client",
    "qtrade-executor/programs/qtrade-executor",
    "staging",
    "staging-practice"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# jupiter-amm-interface => 0.8
ahash = "0.8"
# anchor-lang-idl-spec, anchor-lang-idl
# anchor-attribute-program, anchor-syn
# anchor-client => 1
# raydium_cp_swap_client => 1.0.32
# raydium_amm_v3_client => 1.0.32
# solana-trader-client-rust => 1.0.91
anyhow = "1"
# orca_whirlpools_core; dev-depencies => ^0
approx = { version = "^0" }
# raydium_cp_swap => 0.3.6
# raydium_cp_swap_client => 0.3.7
# raydium_amm_v3 => 0.3.6
# raydium_amm_v3_client => 0.3.7
arrayref = { version = "0.3.6" }
# solana-trader-client-rust
async-trait = "0.1.83"
# qtrade-router => 1.1.7
aws-config = { version = "1.1.7" }
# qtrade-router => 1.51.0
aws-sdk-braket = "1.51.0"
# anchor-lang => 0.21
# solana-trader-client-rust => 0.22.1
base64 = "0.21"
# anchor-lang => 1
# raydium_cp_swap_client => 1.3.3
# raydium_amm_v3_client => 1.3.3
# solana-trader-client-rust => 1.3.3
bincode = "1"
# solana-trader-client-rust => 0.31.9
bitnet = "0.31.9"
# anchor-lang, anchor-spl => 0.10.3
# orca_whirlpools_client => ^0.10
# yellowstone-vixen-parser => 1.5.1
# pyth-sdk => 0.10.3
# pyth-sdk-solana => 0.10.3
borsh = "0.10.3"
# pyth-sdk
# pyth-sdk-solana
borsh-derive = "0.10.3"
# anchor-derive-serde => 0.10.3
borsh-derive-internal = "0.10.3"
# anchor-attribute-account, anchor-attribute-program
# anchor-syn => 0.5
# raydium_cp_swap_client => 0.5.0
# raydium_amm_v3_client => 0.5.0
# yellowstone-vixen-core => 0.5.1
# yellowstone-vixen-parser => 0.5.1
bs58 = "0.5"
# qtrade-runtime => 0.4
chrono = "0.4"
# anchor-lang => 1
# raydium_cp_swap => 1.4.0
# raydium_amm_v3 => 1.19.0, features = ["derive", "min_const_generics"]
# pyth-sdk-solan => 1.7.2
bytemuck = "1"
# anchor-syn => 0.19
cargo_toml = { version = "0.19" }
# raydium_cp_swap_client => 4.1.8
# raydium_amm_v3_client => 4.1.8
# yellowstone-vixen => 4.5.4
# qtrade-indexer => 4.5.4
clap = { version = "4.1.8", features = ["derive"] }
# qtrade-router => 0.9.0
clarabel = "0.9.0"
# raydium_cp_swap_client => 0.2.2
# raydium_amm_v3_client => 0.2.2
colorful = "0.2.2"
# raydium_cp_swap_client => 3.0.0
# raydium_amm_v3_client => 3.0.0
configparser = "3.0.0"
# qtrade
dashmap = "6.1.0"
# solana-trader-client-rust => 0.15
dotenv = "0.15"
# solana-trader-client-rust => 0.11.5
env_logger = "0.11.5"
# orca_whirlpools_core => ^1.1
ethnum = { version = "1.1" }
# anchor-client => 0.3
# yellowstone-vixen-mock => 0.3.31
futures = "0.3"
# yellowston-vixen => 0.3.30
futures-channel = { version = "0.3.30" }
# solana-trader-client-rust => 0.3.31
futures-macro = "0.3.31"
# yellowstone-vixen => 0.3.30
# solana-trader-client-rust => 0.3.31
futures-util = { version = "0.3.30" }
# pyth-sdk
getrandom = { version = "0.2.2" }
# anchor-lang-idl, anchor-attribute-program
# anchor-syn => 0.3
heck = { version = "0.3" }
# raydium_cp_swap_client => 0.4.3
# raydium_amm_v3_client => 0.4.3
# pyth-sdk => 0.4.3
hex = "0.4.3"
# qtrade-router => 0.13.0
itertools = "0.13.0"
# orca_whirlpools_core => ^0.3
js-sys = { version = "0.3" }
# solana-trader-client-rust => 1.5.0
lazy_static = "1.5.0"
# orca_whirlpools_core => ^0.1
libm = { version = "0.1" }
# qtrade-client
# qtrade-runtime
log = { version = "0.4.22", features = ["kv"] }
# anchor-spl => 5
# raydium_amm_v3 => ^1.11.0
# raydium_amm_v3_client => ^1.11.0
mpl-token-metadata = { version = "5" }
# qtrade-router => 0.16.1
ndarray = "0.16.1"
# orca_whirlpools_client => ^0.4
# pyth-sdk-solana => 0.3
num-derive = { version = "0.4" }
# orca_whirlpools_client => ^0.2
# pyth-sdk-solana => 0.2
num-traits = { version = "0.2" }
# qtrade-client
# qtrade-runtime
once_cell = "1.13"
# yellowstone-vixen => 0.24.0
# qtrade-client
opentelemetry = { version = "0.28.0", features = ["metrics", "logs"] }
# qtrade-client
opentelemetry-appender-tracing = { version = "0.28.0", default-features = false }
# qtrade-client
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
# qtrade-client
opentelemetry-resource-detectors = "0.7.0"
# qtrade-client
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio", "logs"] }
# qtrade-client
opentelemetry-semantic-conventions = { version = "0.28.0" }
# yellowstone-vixen => 0.2.14
pin-project-lite = { version = "0.2.14" }
# anchor-attribute-access-control, anchor-attribute-account,
# anchor-attribute-event, anchor-attribute-program
# anchor-derive-serde, anchor-derive-space
# anchor-syn => 1
# orca_whirlpools_macros => ^1
proc-macro2 = "1"
# yellowstone-vixen => 0.13.4
prometheus = { version = "0.13.4" }
# raydium_cp_swap => 1.0
# raydium_amm_v3 => 1.0
proptest = "1.0"
# yellowstone-vixen-proto => 0.13.1
# solana-trader-client-rust => 0.13.3
prost = "0.13.1"
# yellowstone-vixen-proto => 0.13.1
# qtrade-indexer => 0.13.1
prost-build = { version = "0.13.1" }
# yellowstone-vixen-proto => 0.13.1
prost-types = { version = "0.13.1" }
# qtrade-router (this is necessary to automatically initialize the Python interpreter)
pyo3 = { version = "0.23.1", features = ["auto-initialize"] }
# raydium_cp_swap => 0.9
# raydium_amm_v3 => 0.9
# pyth-sdk => 1
quickcheck = "0.9"
# pyth-sdk => 1
quickcheck_macros = "0.9"
# anchor-attribute-access-control, anchor-attribute-account,
# anchor-attribute-constant, anchor-attribute-error
# anchor-attribute-event, anchor-attribute-program
# anchor-derive-accounts, anchor-derive-serde,
# anchor-derive-space => 1
# orca_whirlpools_macros => ^1
quote = "1"
# raydium_cp_swap => 0.8.5
# raydium_cp_swap_client => 0.7.3
# raydium_amm_v3 => 0.8.5
# raydium_amm_v3_client => 0.7.3
# qtrade: going with 0.7.3 here as raydium_amm_v3_client does not build with 0.8.5
rand = "0.7.3"
# anchor-lang-idl, anchor-client => 1
# raydium_cp_swap_client => 1
# raydium_amm_v3_client => 1
# yellowstone-vixen-mock => 1.10.6
regex = { version = "1" }
# solana-trader-client-rust => 0.12.4
reqwest = { version = "0.12.4" }
# solana-trader-client-rust => 0.17.8
ring = "0.17.8"
# jupiter-amm-interface => 1.36.0
rust_decimal = { version = "1.36.0"}
# solana-trader-client-rust (leaving feature in for now)
rustls = { version = "0.23.16", features = ["ring"] }
# pyth-sdk
schemars = "0.8.8"
# anchor-lang-idl-spec, anchor-lang-idl
# anchor-syn = 1
# orca_whirlpools_core, orca_whirlpools_client
# anchor-client => ^1
# raydium_cp_swap_client => 1.0
# raydium_amm_v3_client => 1.0
# yellowstone-vixen-mock => 1.0.204
# yellowston-vixen => 1.0.198
# pyth-sdk => 1.0.136
# pyth-sdk-solana => 1.0.136
# solana-trader-client-rust => 1.0.213
serde = { version = "1", features = ["derive"] }
# orca_whirlpools_core => ^0.5
serde-big-array = { version = "0.5" }
# anchor-lang-idl, anchor-attribute-program
# anchor-syn => 1
# raydium_cp_swap_client => 1.0.78
# raydium_amm_v3_client => 1.0.78
# yellowstone-vixen-mock => 1.0.121
# pyth-sdk => 1.0.79
# solana-trader-client-rust => 1.0.132
serde_json = "1"
# orca_whirlpools_core => ^0.6
serde-wasm-bindgen = { version = "0.6" }
# orca_whirlpools_client => ^3.10
serde_with = { version = "3.10" }
# solana-trader-client-rust => 3.1.1
serial_test = "3.1.1"
# anchor-lang-idl, anchor-syn => 0.10
sha2 = { version = "0.10" }
# qtrade
simplelog = "0.11"
# yellowstone-vixen => 0.13.2
smallvec = "1.13.2"
# orca_whirlpools_client => ^1.17
# anchor-client => 2
# raydium_cp_swap_client => >=1.14, <1.17
# raydium_amm_v3_client => >=1.14, <1.17
# Notes:
# 1. Updated to 2.1 due to pulling in spl-pod 0.5.0
# 2. Also, had to add in patch (see below) for zeroize bug
solana-account-decoder = "2.1"
# orca_whirlpools_client => ^1.17
# anchor-client => 2
# raydium_cp_swap_client >=1.14, <1.17
# raydium_amm_v3_client => >=1.14, <1.17
# yellowstone-vixen-mock => 2.0.3
# pyth-sdk-solana
# Notes:
# 1. Updated to 2.1 due to pulling in spl-pod 0.5.0
# 2. Also, had to add in patch (see below) for zeroize bug
solana-client = "2.1"
# solana-trader-client => 2.1.0
solana-hash = "2.1"
# anchor-lang => 2
# orca_whirlpools_client => ^1.17
# raydium_amm_v3 => <1.17.0
# pyth-sdk-solana => 1.9
# Notes:
# 1. Updated to 2.1 due to pulling in spl-pod 0.5.0
# 2. Also, had to add in patch (see below) for zeroize bug
solana-program = "2.1"
# yellowstone-vixen-mock => 2.0.3
solana-rpc-client-api = "2.1"
# orca_whirlpools_client => ^1.17
# anchor-client => 2
# raydium_cp_swap_client => >=1.14, <1.17
# raydium_amm_v3_client => >=1.14, <1.17
# yellowstone-vixen-mock => 2.0.3
# pyth-sdk-solana => 1.9
# solana-trader-client => 2.1.0
# Notes:
# 1. Updated to 2.1 due to pulling in spl-pod 0.5.0
# 2. Also, had to add in patch (see below) for zeroize bug
solana-sdk = "2.1"
# raydium_cp_swap => 1.1.1
# raydium_amm_v3 => 1.1.1
solana-security-txt = "1.1.1"
# solana-trader-client => 0.1.1
solana-trader-proto = "0.1.1"
# raydium_cp_swap_client => >=1.14, <1.17
# raydium_amm_v3_client => >=1.14, <1.17
# yellowstone-vixen-mock => 2.0.6
# Notes:
# 1. Updated to 2.1 due to pulling in spl-pod 0.5.0
# 2. Also, had to add in patch (see below) for zeroize bug
solana-transaction-status = "2.1"
# anchor-spl => 6
# raydium_cp_swap_client => 2.2.0
# raydium_amm_v3_client => 2.2.0
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
# raydium_cp_swap => 0.2
spl-math = { version = "0.2", features = ["no-entrypoint"] }
# anchor-spl => 6
# raydium_cp_swap => 4.0.0
# raydium_cp_swap_client => 4.0.0
# raydium_amm_v3 => 4.0.0
# raydium_amm_v3_client => 4.0.0
spl-memo = { version = "6", features = ["no-entrypoint"] }
# anchor-spl => 0.5
# qtrade-router
# yellowstone-vixen-parser => 0.3.0
spl-pod = { version = "0.5.0" }
# anchor-spl => 7
# raydium_cp_swap => 4.0.0
# raydium_cp_swap_client => 4.0.0
# raydium_amm_v3_client => 4.0.0
# yellowstone-vixen-parser => 6.0.0
spl-token = { version = "7", features = ["no-entrypoint"] }
# anchor-spl => 6
# raydium_cp_swap_client => 0.9.0
# raydium_amm_v3_client => 0.9.0
# yellowstone-vixen-parser => 4.0.0
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
# raydium_cp_swap_client => 0.7.0
# raydium_amm_v3_client => 0.7.0
spl-token-client = "0.13.0"
# anchor-spl => 0.5
# yellowstone-vixen-parser => 0.3.0
spl-token-group-interface = { version = "0.5" }
# anchor-spl => 0.6
# raydium_amm_v3 => =0.2.0
# yellowstone-vixen-parser => 0.4.0
spl-token-metadata-interface = { version = "0.6" }
# yellowstone-vixen-parser => 0.5.0
spl-type-length-value = { version = "0.7.0" }
# anchor-attribute-access-control, anchor-attribute-account,
# anchor-attribute-constant, anchor-attribute-error,
# anchor-attribute-event, anchor-attribute-program,
# anchor-derive-accounts, anchor-derive-serde,
# anchor-derive-space, anchor-syn => 1,
# orca_whirlpools_macros => ^2
syn = { version = "1", features = ["full", "extra-traits"] }
# qtrade-runtime
tempfile = "3.10.1"
# solana-trader-client-rust => 3.3.1
test-case = "3.3.1"
# anchor-lang, anchor-syn => 1
# orca_whirlpools_client => ^2.0
# anchor-client => 1
# yellowstone-vixen-core => 1.0.64
# yellowstone-vixen-parser => 1.0.64
# yellowstone-vixen => 1.0.64
# pyth-sdk-solana => 1.0
# solana-trader-client-rust
thiserror = "1"
# anchor-client => 1 features ["rt, "sync"]
# yellowstone-vixen-parser => 1.39.2
# yellowstone-vixen => 1.39.2
# solana-trader-client-rust => 1.41.0
# qtrade-router => 1
# qtrade-client
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
# solana-trader-client-rust => 0.26.0
tokio-rustls = "0.26.0"
# solana-trader-client-rust => 0.1.16
tokio-stream = { version = "0.1.16" }
# solana-trader-client-rust => 0.24.0
tokio-tungstenite = { version = "0.24.0" }
# qtrade-client
tokio-util = "0.7.13"
# qtrade-indexer => 0.8.12
toml = "0.8.12"
# yellowstone-vixen-proto => 0.12.1
# solana-trader-client-rust => 0.12.3
tonic = { version = "0.12.1" }
# yellowstone-vixen-proto => 0.12.1
tonic-build = { version = "0.12.1" }
# yellowstone-vixen-proto => 0.12.1
tonic-reflection = { version = "0.12.1" }
# yellowstone-vixen => 0.4.0
topograph = { version = "0.4.0", features = [
    "tokio",
], git = "https://github.com/ray-kast/topograph" }
# solana-trader-client-rust => 0.5.1
tower = "0.5.1"
# yellowstone-vixen => 0.1.40
# solana-trader-client-rust => 0.1.40
# qtrade-indexer => 0.1.40
# qtrade-client
tracing = { version = "0.1.40", features = [ "std"] }
# qtrade-runtime
tracing-appender = { version = "0.2.3" }
# qtrade-client
tracing-core = { version = "0.1", default-features = false}
# qtrade
# qtrade-indexer
# qtrade-client
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter","registry", "std", "fmt"] }
# orca_whirlpools_core => ^0.4
tsify = { version = "0.4", features = ["js"] }
# raydium_cp_swap => 0.9.1
# raydium_amm_v3 => git = "https://github.com/raydium-io/parity-common", package = "uint"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
# anchor-client => 2
# solana-trader-client-rust => 2.5.2
url = "2"
# orca_whirlpools_core => ^0.2
wasm-bindgen = { version = "0.2" }
# solana-trader-client-rust
webpki-roots = "0.26.6"
# yellowstone-vixen => 2.0.0
yellowstone-grpc-client = { version = "2.0.0" }
# yellowstone-vixen-core => 2.0.0
# yellowstone-vixen-mock => 2.0.0
# yellowstone-vixen
yellowstone-grpc-proto = { version = "2.0.0", default-features = false }


# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"