[package]
name = "qtrade-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = {workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true}
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
qtrade-runtime = { path = "../qtrade-runtime" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
