[package]
name = "qtrade-custom-checks"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = {workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true}
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
