[package]
name = "qtrade-indexer"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
orca_whirlpools_client = { path = "../orca/client" }
raydium_amm_v3_client = { path = "../raydium-clmm/client" }
raydium_cp_swap_client = { path = "../raydium-cp-swap/client" }
qtrade-shared-types = { path = "../qtrade-shared-types" }
serde = { workspace = true, features = ["derive"] }
spl-pod = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true}
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true}
yellowstone-vixen = { path = "../vixen/crates/runtime" }
yellowstone-vixen-core = { path = "../vixen/crates/core" }
yellowstone-vixen-parser = { path = "../vixen/crates/parser", features = [
  "proto",
  "token-program",
  "orca",
  "raydium"
] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
yellowstone-vixen-mock = { path = "../vixen/crates/mock" }

[[example]]
name = "filter_dexes"
path = "examples/filter_dexes.rs"
