[package]
name = "qtrade-streamer"
description = "Test bed for integrating yellowstone-vixen-parser with Vixen program streams"
publish = false
edition.workspace = true
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies]
# clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
# toml = "0.8.12"
toml = { workspace = true }
# tracing = "0.1.40"
tracing = { workspace = true}
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# yellowstone-vixen = { workspace = true, features = ["stream"] }
yellowstone-vixen = { path = "../vixen/crates/runtime", features = ["stream"] }
# yellowstone-vixen-parser = { workspace = true, features = [
#   "proto",
#   "token-extensions",
#   "token-program",
#   "orca",
#   "raydium"
# ] }
yellowstone-vixen-parser = { path = "../vixen/crates/parser", features = [
  "proto",
  # qtrade: haven't got this building yet
  # "token-extensions",
  "token-program",
  "orca",
  "raydium"
] }

[build-dependencies]
# prost-build = "0.13.1"
prost-build = { workspace = true }
