[package]
name = "qtrade-wallets"
version = "0.1.0"
edition.workspace = true

[[example]]
name = "basic_workflow"
path = "examples/basic_workflow.rs"

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
lazy_static = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

