[package]
name = "qtrade"
version = "0.1.0"
# qtrade: removing this
# rust-version = "1.75.0"
edition.workspace = true

[[test]]
name = "initialize"
path = "tests/initialize/mod.rs"

[dependencies]
# anchor-client = "0.30.1"
anchor-client = { path = "../anchor/client" }
# anchor-lang = "0.30.1"
anchor-lang = { path = "../anchor/lang" }
# anyhow = "1.0.32"
anyhow = { workspace = true }
# arrayref = "0.3.7"
arrayref = { workspace = true}
# bincode = { version = "1.3.3" }
bincode = { workspace = true }
# bs58 = { version = "0.5.0"}
bs58 = { workspace = true}
# clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
# colorful = "0.2.2"
colorful = { workspace = true}
# configparser = "3.0.0"
configparser = { workspace = true }
# hex = "0.4.3"
hex = { workspace = true}
# rand = "0.7.3"
rand = { workspace = true }
# raydium-cp-swap = {path = "../../raydium-cp-swap/programs/cp-swap", features = ["no-entrypoint", "client"]}
raydium-cp-swap = {path = "../raydium-cp-swap/programs/cp-swap", features = ["no-entrypoint", "client"]}
# regex = "1"
regex = { workspace = true }
# serde = { version = "1.0", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
# serde_json = { version = "1.0.78" }
serde_json = { workspace = true }
# solana-account-decoder = "1.18.26"
solana-account-decoder = { workspace = true}
# solana-client = "1.18.26"
solana-client = { workspace = true }
# solana-sdk = "1.18.26"
solana-sdk = { workspace = true}
# solana-transaction-status = "1.18.26"
solana-transaction-status = { workspace = true }
# spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"]}
# spl-memo = "4.0.0"
spl-memo = { workspace = true}
# spl-token = { version = "4.0.0", features =["no-entrypoint"] }
spl-token = { workspace = true, features =["no-entrypoint"] }
# spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"]}
spl-token-2022 = { workspace = true, features = ["no-entrypoint"]}
# spl-token-client = "0.10.1"
spl-token-client = { workspace = true}
