[package]
name = "staging"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common utilities
thiserror = "1.0"        # Error handling
anyhow = "1.0"           # Error propagation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"          # Binary serialization

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Data structures
itertools = "0.12"       # Iterator extensions
hashbrown = "0.14"       # Fast hashmap implementation

# Networking
url = "2.3"              # URL parsing

# Crypto and blockchain
sha2 = "0.10"            # SHA-256 and other hash functions
ed25519-dalek = "1.0"    # Digital signatures
rand = "0.7"             # Random number generation
bs58 = "0.4"             # Base58 encoding (used in blockchain addresses)
hex = "0.4"              # Hex encoding/decoding

# Macros
paste = "1.0"            # For identifier concatenation in macros

[dev-dependencies]
pretty_assertions = "1.4"  # Better test assertions
proptest = "1.0"           # Property-based testing