[package]
name = "orca_whirlpools_client"
version = "0.1.0"
description = "Rust client to interact with Orca's on-chain Whirlpool program."
include = ["src/*"]
documentation = "https://orca-so.github.io/whirlpools/"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/whirlpools"
license = "Apache-2.0"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
authors = ["team@orca.so"]
edition.workspace = true

[features]
default = ["core-types", "fetch"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = []
core-types = ["dep:orca_whirlpools_core"]
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]

[dependencies]
# anchor-lang = { version = "^0.29", optional = true }
anchor-lang = { path = "../../anchor/lang", optional = true }
# borsh = { version = "^0.10" }
borsh = { workspace = true }
# num-derive = { version = "^0.4" }
num-derive = { workspace = true }
# num-traits = { version = "^0.2" }
num-traits = { workspace = true }
orca_whirlpools_core = { path = "../core", optional = true }
# serde = { version = "^1.0", features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
# serde_with = { version = "^3.10", optional = true }
serde_with = { workspace = true, optional = true }
# solana-program = { version = "^1.17" }
solana-program = { workspace = true }
# solana-sdk = { version = "^1.17", optional = true }
solana-sdk = { workspace = true, optional = true }
# solana-client = { version = "^1.17", optional = true }
solana-client = { workspace = true, optional = true }
# solana-account-decoder = { version = "^1.17", optional = true }
solana-account-decoder = { workspace = true, optional = true }
# thiserror = { version = "^2.0" }
thiserror = { workspace = true }
