[package]
name = "pyth-sdk"
version = "0.8.0"
authors = ["Pyth Data Foundation"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "Data structures and utilites for the Pyth price oracle"
keywords = [ "pyth", "oracle" ]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hex = { workspace = true , features = ["serde"] }
borsh = { workspace = true }
borsh-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }

[dev-dependencies]
serde_json = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true}
