[package]
name = "raydium_amm_v3_client"
version = "0.1.0"
# qtrade: Removing this
# rust-version = "1.56"
edition.workspace = true

[dependencies]
# anchor-client = "0.29.0"
anchor-client = { path = "../../anchor/client" }
# anchor-lang = "0.29.0"
anchor-lang = { path = "../../anchor/lang" }
# raydium-amm-v3 = {path = "../programs/amm", features = ["no-entrypoint", "client"]}
raydium-amm-v3 = {path = "../programs/amm", features = ["no-entrypoint", "client"]}
# solana-sdk = ">=1.14, <1.17"
solana-sdk = { workspace = true }
# solana-client = ">=1.14, <1.17"
solana-client = { workspace = true }
# solana-account-decoder = ">=1.14, <1.17"
solana-account-decoder = { workspace = true }
# qtrade added
solana-program = { workspace = true }
# solana-transaction-status = ">=1.14, <1.17"
solana-transaction-status = { workspace = true }
# spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token = { workspace = true }
# spl-token-client = "0.7.0"
spl-token-client = { workspace = true}
# spl-memo = "4.0.0"
spl-memo = { workspace = true }
# spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true}
# spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
spl-token-2022 = { workspace = true }
# mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
mpl-token-metadata = { workspace = true }
# clap = { version = "4.1.8", features = ["derive"] }
clap = { workspace = true }
# anyhow = "1.0.32"
anyhow = { workspace = true}
# rand = "0.7.3"
rand = { workspace = true}
# hex = "0.4.3"
hex = { workspace = true }
# configparser = "3.0.0"
configparser = { workspace = true }
# serde_json = { version = "1.0.78" }
serde_json = { workspace = true }
# serde = { version = "1.0", features = ["derive"] }
serde = { workspace = true }
# arrayref = "0.3.7"
arrayref = { workspace = true}
# bs58 = { version = "0.5.0"}
bs58 = { workspace = true}
# bincode = { version = "1.3.3" }
bincode = { workspace = true }
# regex = "1"
regex = { workspace = true}
# colorful = "0.2.2"
colorful = { workspace = true }