[package]
name = "raydium-cp-swap"
version = "0.1.0"
description = "Created with Anchor"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []

[dependencies]
anchor-lang = { path = "../../../anchor/lang", features = ["init-if-needed"] }
anchor-spl = { path = "../../../anchor/spl", features = ["metadata"] }
# spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token = { workspace = true }
# spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-math = { workspace = true }
# spl-memo = "4.0.0"
spl-memo = { workspace = true }
# uint = "0.9.1"
uint = { workspace = true }
# solana-security-txt = "1.1.1"
solana-security-txt = { workspace = true }
# bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
# arrayref = { version = "0.3.6" }
arrayref = { workspace = true }

[dev-dependencies]
# quickcheck = "0.9"
quickcheck = { workspace = true }
# proptest = "1.0"
proptest = { workspace = true }
# rand = "0.8.5"
rand = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
