[package]
name = "yellowstone-vixen-core"
description = "Core types for Vixen"
# authors = ["TODO"]
version = "0.0.0"
edition.workspace = true
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies]
bs58 = { workspace = true }
thiserror = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-proto = { path = "../proto", optional = true }

[features]
proto = ["dep:yellowstone-vixen-proto"]
